# charge

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  conanfile.txt  conaninfo.txt
charge/: CMakeLists.txt
charge_engine/: CMakeLists.txt
charge_engine/include/charge/: charge.hpp  exception.hpp  future.hpp  types.hpp
charge_engine/src/: ChargeInterface.hpp  Commandable.hpp  InclusionNotesPredicate.cpp  InclusionNotesPredicate.hpp  InclusionNotesSniffer.cpp  InclusionNotesSniffer.hpp  ReadableStream.hpp  StreamFilter.hpp  cache.cpp  cache.hpp  charge.cpp  command_line.cpp  command_line.hpp  compiler.cpp  compiler.hpp  config.cpp  config.hpp  engine.cpp  engine.hpp  exception.cpp  exception.hpp  header_dependencies.cpp  header_dependencies.hpp  imports.cpp  imports.hpp  platform.hpp  platform_posix.cpp  platform_win.cpp  process.hpp  process_posix.cpp  process_win.cpp  tools.cpp  tools.hpp  tools_posix.cpp  tools_win.cpp  types.cpp
charge_engine/test/: CMakeLists.txt  InclusionNotesSniffer.cpp  catch_exception.hpp  compiler.cpp  engine.cpp  exec_test.cpp  helpers.hpp  helpers_posix.cpp  helpers_win.cpp  helpers_windows.cpp  initialization.cpp  process_test.cpp  run_exec.cpp  run_process.cpp  test_InclusionNotesPredicate.cpp  test_InclusionNotesSniffer.cpp  test_cache.cpp  test_command_line.cpp  test_compiler.cpp  test_imports.cpp  test_process.cpp  tests.cpp  windows_tests.bat
charge_engine/test/exec_posix/exec/: expected_result_02  repeat_args.sh  runtests.sh
charge_engine/test/exec_posix/shell_process/: expected_result_01  three_lines.vbs
charge_engine/test/exec_test_cmd/: exec_test_driver.bat  exit_with_code.vbs  expected_results_01  expected_results_02
charge_engine/test/exec_win/: runtests.bat  runtests.bat.in
charge_engine/test/exec_win/exec/: repeat_args.bat  runtests.bat
charge_engine/test/exec_win/shell_process/: expected_result_02  runtests.bat
charge_engine/test/process_test_cmd/: process_test_driver.bat  three_lines.vbs
cmake/: BuildType.cmake  msvc.cmake  platform_source.cmake  research.md
devs/: TODO.md  design.md
doc/: TODO.md  building.md  coding_guidelines.md  design.md  development.md  index.md  reference.md  todo.md  tutorial.md
examples/: args.cpp
i18n_lab/: CMakeLists.txt  README.md  command_line_arguments.cpp  dump_to_hexadecimal.cpp  getenv_encoding.cpp  load_user_locale.cpp  mbstowcs_locale_category.cpp  open_file.cpp  open_file_tests.bat  read_file.cpp  read_file_test.bat  read_stdin.cpp  stdout_and_codepage.cpp  utf16be_greek  utf8_greek  wchar_win_console.cpp  windows-1253_greek
quickc_engine/: CMakeLists.txt
quickc_engine/include/quickc/: future.hpp  quickc.hpp
quickc_engine/src/: engine.cpp
quickc_engine/test/: tests.cpp
stirrup/: CMakeLists.txt
stirrup/development/experiments/: CMakeLists.txt
stirrup/development/experiments/plain_fmt/: plain_fmt.cpp
stirrup/development/experiments/windows/console_input/: console_input.cpp
stirrup/development/experiments/windows/get_windows_user_cp/: CMakeLists.txt
stirrup/development/experiments/windows/u32string/: u32string.cpp  utf8.txt
stirrup/doc/: design.md  scope.md
stirrup/doc/notes/: international_support.md
stirrup/examples/: CMakeLists.txt  CMakeLists.txt.stash
stirrup/examples/console_input/: CMakeLists.txt
stirrup/examples/get_windows_user_cp/: CMakeLists.txt  get_windows_user_cp.cpp
stirrup/examples/hello/: hello.cpp
stirrup/examples/is_windows_utf16/: CMakeLists.txt  is_windows_utf16.cpp
stirrup/examples/plain_fmt/: CMakeLists.txt  plain_fmt.cpp
stirrup/examples/std_numpunct/: CMakeLists.txt
stirrup/examples/transcode_bananas/: CMakeLists.txt  bananas.txt  input_file  transcode_bananas.cpp
stirrup/examples/u32string/: CMakeLists.txt
stirrup/include/stirrup/: ReadableStream.hpp  StreamCookerReader.hpp  environment_variable.hpp  error.hpp  file.hpp  format.hpp  locale.hpp  process.hpp  readable_stream.hpp  repr.hpp  standard_streams.hpp  stirrup.hpp  stream.hpp  stream_cooker_reader.hpp  string.hpp  string_windows.hpp  text_stream.hpp
stirrup/proof_of_concept/: CMakeLists.txt
stirrup/proof_of_concept/is_windows_utf16/: CMakeLists.txt  is_windows_utf16.cpp
stirrup/proof_of_concept/std_numpunct/: CMakeLists.txt  std_numpunct.cpp
stirrup/src/: StreamCookerReader.cpp  environment_variable_win.cpp  environment_variable_windows.cpp  error.cpp  file.cpp  file_posix.cpp  file_windows.cpp  format.cpp  getenv_win.cpp  locale.cpp  process_win.cpp  process_windows.cpp  repr.cpp  scoped_locale.cpp  standard_streams.cpp  stirrup.cpp  str.cpp  str_construction.cpp  stream.cpp  stream_cooker_reader.cpp  stream_windows.cpp  string.cpp  string_posix.cpp  string_win.cpp  string_windows.cpp  text_stream.cpp
stirrup/test/: CMakeLists.txt  console_test.cpp  detect_supported_locales.cmake  environment_variable_test.cpp  error_test.cpp  file_test.cpp  format_test.cpp  getenv_test.cpp  initialization.cpp  locale_test.cpp  make_errno_message_test.cpp  quote_if_needed_test.cpp  repr_test.cpp  scoped_locale_test.cpp  str_construction_test.cpp  stream_cooker_reader_test.cpp  stream_test.cpp  string_test.cpp  string_windows_test.cpp  text_stream_test.cpp
stirrup/test/fixtures/: CMakeLists.txt
stirrup/test/fixtures/include/stirrup/test/: FakeReadableStream.hpp  fake_readable_stream.hpp  installed_locales.hpp
stirrup/test/fixtures/src/: FakeReadableStream.cpp  fake_readable_stream.cpp  installed_locales_posix.cpp.in
stirrup/test/integration/: CMakeLists.txt  test.ps1
stirrup/test/integration/console_stream/: CMakeLists.txt  console_stream_test.cpp
stirrup/test/integration/process/: CMakeLists.txt  stirrup_child_process_actor.cpp  stirrup_process_invoke.cpp  test.in.ps1  test.ps1.in
stirrup/test/support/: CMakeLists.txt
stirrup/test/support/include/stirrup/test/: string_string_maker.hpp
unicompiler/: CMakeLists.txt
unicompiler/include/unicompiler/: unicompiler.hpp
unicompiler/src/: Compiler.cpp  process.hpp  process_win.cpp  unicompiler.cpp
unicompiler/test/: CMakeLists.txt  process_test.cpp  tests.cpp
(+18 files in other folders)
